--- a/blog/bootstrap/templates/zinnia/skeleton.html
+++ b/blog/bootstrap/templates/zinnia/skeleton.html
@@ -29,7 +29,11 @@
         <script src="{% static "zinnia_bootstrap/assets/js/html5shiv.js" %}"></script>
         <script src="{% static "zinnia_bootstrap/assets/js/respond.min.js" %}"></script>
     <![endif]-->
+    <!--
     <link rel="shortcut icon" href="{% static "zinnia/theme/img/favicon.ico" %}" />
+    -->
+    <!-- 修改网页选项卡显示的logo -->
+    <link rel="shortcut icon" href="{% static "zinnia_bootstrap/theme/img/favicon.ico" %}" />
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static "zinnia_bootstrap/assets/ico/apple-touch-icon-144-precomposed.png" %}" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "zinnia_bootstrap/assets/ico/apple-touch-icon-114-precomposed.png" %}" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "zinnia_bootstrap/assets/ico/apple-touch-icon-72-precomposed.png" %}" />
@@ -141,8 +145,16 @@
         </div>
       </div>
     </div>
-    <footer class="container">
+    <footer class="container" align="center">
+      <br><br>
+
+      <!-- 站长统计 -->
+      <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258346928'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258346928%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+
+      <!--
       <p>{% blocktrans %}Powered by <a href="http://www.djangoproject.com">Django</a> and <a href="https://github.com/Fantomas42/django-blog-zinnia">Zinnia {{ ZINNIA_VERSION }}</a>.{% endblocktrans %}</p>
+      -->
+      <p>{% blocktrans %}该网站由 <a href="http://www.djangoproject.com">Django</a> 和 <a href="https://aliyun.com">阿里云</a>{% endblocktrans %} 强力驱动</p>
     </footer>
     <script type="text/javascript" src="{% static "zinnia_bootstrap/assets/js/jquery.js" %}"></script>
     <script type="text/javascript" src="{% static "zinnia_bootstrap/bootstrap/js/bootstrap.min.js" %}"></script>
