modify the click link to a new tab.

--- a/blog/bootstrap/templates/zinnia/skeleton.html
+++ b/blog/bootstrap/templates/zinnia/skeleton.html
@@ -154,7 +154,7 @@
       <!--
       <p>{% blocktrans %}Powered by <a href="http://www.djangoproject.com">Django</a> and <a href="https://github.com/Fantomas42/django-blog-zinnia">Zinnia {{ ZINNIA_VERSION }}</a>.{% endblocktrans %}</p>
       -->
-      <p>{% blocktrans %}该网站由 <a href="http://www.djangoproject.com">Django</a> 和 <a href="https://aliyun.com">阿里云</a>{% endblocktrans %} 强力驱动</p>
+      <p>{% blocktrans %}该网站由 <a target='_blank' href="http://www.djangoproject.com">Django</a> 和 <a target='_blank' href="https://aliyun.com">阿里云</a>{% endblocktrans %} 强力驱动</p>
     </footer>
     <script type="text/javascript" src="{% static "zinnia_bootstrap/assets/js/jquery.js" %}"></script>
     <script type="text/javascript" src="{% static "zinnia_bootstrap/bootstrap/js/bootstrap.min.js" %}"></script>
