add a line conent of baidu union.

--- a/blog/bootstrap/templates/zinnia/skeleton.html
+++ b/blog/bootstrap/templates/zinnia/skeleton.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="{{ LANGUAGE_CODE }}">
   <head>
+    <meta name="baidu_union_verify" content="3efe8c1422ffa44a84d28a85626950c9">
     <meta charset="utf-8">
     <title>文哥博客 - {% block title %}{% endblock title %}{% block title-page %}{% endblock title-page %}</title>
     <meta name="robots" content="follow, all" />
